Added first blog article and updated styling

--- a/index.html
+++ b/index.html
@@ -3,11 +3,22 @@ title: Home
 ---
 <h1>Latest Posts</h1>
 
-<ul>
+{% for c in site.category %}
+    <h2>{{ c }}</h2>
     {% for a in site.blog %}
-    <li>
-        <h2><a href="{{ a.url }}">{{ a.title }}</a></h2>
-        {{ a.excerpt }}
-    </li>
+        {% if a.type == c %}
+        <div class="card-two-column article">
+            <img src="/content/{{ a.slug }}/thumbnail.png" alt="" style="height: 128px;">
+            <div class="card-two-column-details">
+                <h3>
+                    {{ a.name }}
+                </h3>
+                <p class="subtitle">Last Updated: {{ a.date | date: "%d-%m-%Y" }}</p>
+                <p>{{ a.desc }}</p>
+                <div class="divider"></div>
+            </div>
+            <a href="{{ a.url }}"></a>
+        </div>
+        {% endif %}
     {% endfor %}
-</ul>
+{% endfor %}
